<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheBachaoProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search Location</string>
    <string name="mapid">amarp.l46caon4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_audit_title">"Submit Audit Report"</string>
    <string name="hint_name">"Enter Your Name"</string>
    <string name="hint_email">"Enter Your Email"</string>
    <string name="btn_txt_submit">"Submit"</string>
    <string name="edit_txt_feeling">"Any Comments !"</string>
    <string name="check_transport_available">"Transport is available"</string>
    <string name="check_street_lights">"Street lights are available"</string>
    <string name="overall_experience">"Overall experience"</string>
    <string name="map_info">"Long press on map for safety audit."</string>
    <string name="title_activity_detailed_review">Reviews</string>
    <string name="msg_no_internet">Please check your internet connection</string>
    <string name="msg_location_service_dialog">You need to turn on the Location Services</string>
    <string name="title_location_service_dialog">Turn on Location Service</string>
    <string name="title_activity_write_detailed_review">WriteDetailedReviewActivity</string>

    <string name="title_section1">Infrastructure</string>
    <string name="title_section2">Safety</string>
    <string name="title_section3">Transportation</string>
    <string name="title_activity_write_dreview">Review</string>
</resources>
